tests/testdata/test/doc_failure.out
Check [WILDCARD]/tests/testdata/test/doc_failure.ts
Check [WILDCARD]/tests/testdata/test/doc_failure.ts$2-9.ts
Check [WILDCARD]/tests/testdata/test/doc_failure.ts$13-18.ts
Check [WILDCARD]/tests/testdata/test/doc_failure.ts$24-29.ts
running 0 tests from ./test/doc_failure.ts
running 1 test from ./test/doc_failure.ts$2-9.ts
[WILDCARD]/tests/testdata/test/doc_failure.ts$2-9.ts ... FAILED ([WILDCARD]ms)
running 1 test from ./test/doc_failure.ts$13-18.ts
[WILDCARD]/tests/testdata/test/doc_failure.ts$13-18.ts ... FAILED ([WILDCARD]ms)
running 1 test from ./test/doc_failure.ts$24-29.ts
[WILDCARD]/tests/testdata/test/doc_failure.ts$24-29.ts ... FAILED ([WILDCARD]ms)

 ERRORS 

[WILDCARD]/tests/testdata/test/doc_failure.ts$13-18.ts => ./test/doc_failure.ts$13-18.ts:3:6
error: AssertionError: Values are not equal.


    [Diff] Actual / Expected


-   3
+   4

  throw new AssertionError(message);
        ^
    at assertEquals ([WILDCARD]/tests/util/std/assert/equals.ts:47:9)
    at [WILDCARD]/tests/testdata/test/doc_failure.ts$13-18.ts:4:5

[WILDCARD]/tests/testdata/test/doc_failure.ts$2-9.ts => ./test/doc_failure.ts$2-9.ts:3:6
error: AssertionError: Expected actual: "2.5e+0" to be close to "2": delta "5e-1" is greater than "2e-7".
  throw new AssertionError(
        ^
    at assertAlmostEquals ([WILDCARD]/tests/util/std/assert/almost_equals.ts:51:9)
    at [WILDCARD]/tests/testdata/test/doc_failure.ts$2-9.ts:6:5

[WILDCARD]/tests/testdata/test/doc_failure.ts$24-29.ts => ./test/doc_failure.ts$24-29.ts:3:6
error: AssertionError: Values are not equal.


    [Diff] Actual / Expected


-   4
+   3

  throw new AssertionError(message);
        ^
    at assertEquals ([WILDCARD]/tests/util/std/assert/equals.ts:47:9)
    at [WILDCARD]/tests/testdata/test/doc_failure.ts$24-29.ts:4:5

 FAILURES 

[WILDCARD]/tests/testdata/test/doc_failure.ts$13-18.ts => ./test/doc_failure.ts$13-18.ts:3:6
[WILDCARD]/tests/testdata/test/doc_failure.ts$2-9.ts => ./test/doc_failure.ts$2-9.ts:3:6
[WILDCARD]/tests/testdata/test/doc_failure.ts$24-29.ts => ./test/doc_failure.ts$24-29.ts:3:6

FAILED | 0 passed | 3 failed ([WILDCARD]ms)

error: Test failed
